<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
 
    <EditText
        android:id="@+id/enter_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/enter_age"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_age"
        android:inputType="number" />
    
    <EditText
        android:id="@+id/enter_height"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_height"
        android:inputType="number"/>
    
    <EditText
        android:id="@+id/enter_weight"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_weight"
        android:inputType="number" />
    
    <EditText
        android:id="@+id/enter_gender"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_gender" />
    
	<Button
        android:id="@+id/next_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_next"
        android:onClick="nextButtonClick" /> 
          
</LinearLayout>
